SET(BINARY VVVVVV_tst)

IF(APPLE)
    include(FindPkgConfig) 	
    PKG_SEARCH_MODULE(SDL2 REQUIRED SDL2)
    PKG_SEARCH_MODULE(SDL2_MIXER REQUIRED SDL2_mixer)
    message(${SDL2_MIXER_LIBRARIES})
ELSE()
    find_package(SDL2 CONFIG)
ENDIF()

SET(TEST_SOURCES
    main.cpp
    tst_game.cpp
    )

LINK_DIRECTORIES(/usr/local/lib)

ADD_EXECUTABLE(${BINARY} ${TEST_SOURCES})
ADD_TEST(NAME ${BINARY} COMMAND ${BINARY})
TARGET_LINK_LIBRARIES(${BINARY} VVVVVV_lib gtest SDL2_mixer )
